package edu.usfca.dataflow.utils;

import java.util.Arrays;
import java.util.List;
import java.util.Map;

import edu.usfca.protobuf.Common.DeviceId;
import edu.usfca.protobuf.Profile.DeviceProfile;
import edu.usfca.protobuf.Profile.InAppPurchaseProfile;

/**
 * TODO You are NOT supposed to change anything in this file.
 *
 * Yet, if you find it useful to modify it, do so at your own risk.
 *
 * To be clear, project 5 does not require you modify/change any of this code.
 *
 * The reference solution uses this code as-is. This code is not as inefficient as it looks...
 */
public class PredictionUtils {
  /**
   * This is a "dummy" method that transforms a DeviceProfile into a float[] which is subsequently used as input
   * features to ML model.
   *
   * The formula here is merely calculating the ratio of two values (over four pairs), and it has little meaning.
   *
   * Yet this exact formula will be used to check (in unit tests) whether your pipeline is correct.
   *
   * In practice, you would expect much more complex "transformations" that are responsible for producing input data for
   * ML models.
   *
   * So, for now, consider this method as a black-box algorithm that turns DeviceProfile into a float[], with the help
   * of IAPP map (which stores information on apps).
   */
  public static float[] getInputFeatures(DeviceProfile dp, Map<String, InAppPurchaseProfile> iappMap) {
    final long totalPurchasers = iappMap.values().stream().map(iapp -> iapp.getNumPurchasers()).reduce(0L, Long::sum);
    final long totalAmount = iappMap.values().stream().map(iapp -> iapp.getTotalAmount()).reduce(0L, Long::sum);

    final long intersectApp = dp.getAppList().stream().filter(x -> iappMap.containsKey(x.getBundle())).count();
    final long intersectPurchaser = dp.getAppList().stream().filter(x -> iappMap.containsKey(x.getBundle()))
        .map(x -> iappMap.get(x.getBundle()).getNumPurchasers()).reduce(0L, Long::sum);
    final long intersectAmount = dp.getAppList().stream().filter(x -> iappMap.containsKey(x.getBundle()))
        .map(x -> iappMap.get(x.getBundle()).getTotalAmount()).reduce(0L, Long::sum);

    float[] feature = imageData.get(dp.getDeviceId().getUuid().toUpperCase().charAt(0) % 15).clone();

    feature[486] = (0.0f + intersectApp) / (1.0f + iappMap.size());
    feature[686] = (0.0f + intersectApp) / (1.0f + dp.getAppCount());
    feature[586] = (0.0f + intersectPurchaser) / (1.0f + totalPurchasers);
    feature[777] = (0.0f + intersectAmount) / (1.0f + totalAmount);

    for (int i = 100; i <= 700; i += 40) {
      feature[i] = (float) (dp.getFirstAt() % i) / i;
    }

    return feature;
  }

  static final int[] data_673 = new int[] {184, 43, 185, -105, 186, -21, 187, -1, 188, -16, 189, 83, 209, 21, 210, 84,
      211, -89, 212, -13, 213, -2, 214, -2, 215, -2, 216, -2, 217, -5, 218, 56, 235, 54, 236, -121, 237, -22, 238, -2,
      239, -2, 240, -2, 241, -2, 242, -75, 243, -68, 244, -37, 245, -2, 246, 116, 261, 28, 262, 95, 263, -11, 264, -2,
      265, -2, 266, -2, 267, -28, 268, -119, 269, 4, 270, 1, 271, 2, 272, -27, 273, -27, 274, 36, 288, 46, 289, -36,
      290, -2, 291, -2, 292, -2, 293, -19, 294, -81, 295, 76, 300, -26, 301, -103, 315, 66, 316, -4, 317, -2, 318, -2,
      319, -2, 320, -49, 321, 22, 327, 122, 328, -45, 329, -67, 330, -99, 331, 43, 342, 17, 343, -33, 344, -2, 345, -2,
      346, -21, 347, 52, 348, 5, 352, 17, 353, 53, 354, 61, 355, -5, 356, -2, 357, -2, 358, -2, 359, 105, 370, 73, 371,
      -2, 372, -2, 373, -30, 374, 28, 376, 9, 377, 51, 378, -123, 379, -45, 380, -32, 381, -2, 382, -2, 383, -2, 384,
      -2, 385, -2, 386, -40, 387, 16, 398, 126, 399, -2, 400, -2, 401, -38, 402, -78, 403, -78, 404, -44, 405, -2, 406,
      -2, 407, -2, 408, -2, 409, -2, 410, -2, 411, -2, 412, -2, 413, -35, 414, 62, 426, 71, 427, -2, 428, -2, 429, -2,
      430, -2, 431, -2, 432, -2, 433, -2, 434, -2, 435, -2, 436, -2, 437, -2, 438, -2, 439, -2, 440, -46, 441, 52, 454,
      6, 455, 119, 456, -18, 457, -6, 458, -17, 459, -73, 460, -113, 461, 113, 462, 74, 463, -20, 464, -2, 465, -2, 466,
      -3, 467, -81, 468, 14, 485, 62, 489, 85, 490, -37, 491, -2, 492, -2, 493, -2, 494, -107, 515, 10, 516, -89, 517,
      -8, 518, -2, 519, -2, 520, -2, 521, -75, 522, 4, 543, -87, 544, -2, 545, -2, 546, -2, 547, -3, 548, -70, 549, 4,
      569, 7, 570, -115, 571, -5, 572, -2, 573, -2, 574, -2, 575, -108, 597, 90, 598, -2, 599, -2, 600, -2, 601, -46,
      602, 29, 603, 5, 624, 45, 625, -11, 626, -2, 627, -2, 628, -5, 629, 97, 652, 109, 653, -2, 654, -2, 655, -2, 656,
      77, 680, -6, 681, -2, 682, -2, 683, -91, 684, 21, 708, -79, 709, -2, 710, -105, 711, 3, 9};
  static final int[] data_1488 = new int[] {175, 1, 176, 12, 190, 67, 191, -120, 192, 15, 202, 11, 203, 97, 204, -14,
      205, 56, 216, 8, 217, 71, 218, -10, 219, -3, 220, -12, 229, 16, 230, -112, 231, -3, 232, -3, 233, 99, 243, 10,
      244, 115, 245, -3, 246, -3, 247, -3, 248, 118, 257, -126, 258, -3, 259, -3, 260, -3, 261, 99, 271, 94, 272, -3,
      273, -3, 274, -3, 275, -17, 276, 5, 285, -126, 286, -3, 287, -3, 288, -6, 289, 84, 299, 112, 300, -3, 301, -3,
      302, -19, 303, 55, 313, -44, 314, -3, 315, -3, 316, -28, 326, 15, 327, -33, 328, -3, 329, -3, 330, 121, 341, -1,
      342, -3, 343, -3, 344, -113, 354, -84, 355, -3, 356, -3, 357, -75, 358, 6, 369, -2, 370, -3, 371, -3, 372, 105,
      381, 85, 382, -15, 383, -3, 384, -3, 385, 121, 397, -2, 398, -3, 399, -3, 400, 105, 408, 19, 409, -39, 410, -3,
      411, -3, 412, -27, 413, 18, 425, -35, 426, -3, 427, -3, 428, -58, 435, 19, 436, -73, 437, -3, 438, -3, 439, -3,
      440, 60, 453, 34, 454, -3, 455, -3, 456, -8, 457, 78, 461, 54, 462, 106, 463, -43, 464, -3, 465, -3, 466, -3, 467,
      -30, 468, 22, 481, 2, 482, -97, 483, -3, 484, -3, 485, -32, 486, -112, 487, -51, 488, -112, 489, -17, 490, -3,
      491, -64, 492, -20, 493, -3, 494, -3, 495, -96, 510, 29, 511, -41, 512, -3, 513, -3, 514, -3, 515, -3, 516, -3,
      517, -22, 518, -120, 519, 11, 520, 96, 521, -3, 522, -3, 523, -96, 539, 21, 540, 49, 541, -96, 542, -96, 543, -96,
      544, -120, 545, 29, 548, 11, 549, -44, 550, -3, 551, -16, 552, 26, 577, -100, 578, -3, 579, -3, 580, 30, 605, 81,
      606, -3, 607, -3, 608, -65, 609, 12, 633, 6, 634, -97, 635, -3, 636, 39, 662, 4, 663, 12, 664, 2, 4};
  static final int[] data_2968 = new int[] {179, 20, 180, -52, 181, -126, 206, 34, 207, -18, 208, -2, 209, -13, 210, 72,
      211, 47, 212, 21, 232, 5, 233, 74, 234, -15, 235, -2, 236, -2, 237, -2, 238, -2, 239, -2, 240, -27, 241, -90, 242,
      40, 259, 26, 260, -100, 261, -2, 262, -2, 263, -120, 264, 69, 265, 69, 266, 69, 267, 69, 268, -86, 269, -2, 270,
      -27, 271, 34, 286, 26, 287, -102, 288, -2, 289, -42, 290, 59, 297, 58, 298, -2, 299, -70, 313, 22, 314, -100, 315,
      -14, 316, -116, 317, 13, 325, 3, 326, -65, 327, -58, 328, 5, 341, 106, 342, -59, 343, 68, 353, 11, 354, -40, 355,
      -8, 356, 21, 381, 58, 382, -2, 383, -71, 409, 117, 410, -2, 411, -96, 436, 9, 437, -48, 438, -19, 439, 9, 464,
      123, 465, -2, 466, -104, 491, 26, 492, -42, 493, -11, 494, 44, 518, 26, 519, -34, 520, -2, 521, 114, 545, 5, 546,
      -67, 547, -2, 548, -95, 549, 4, 573, -115, 574, -2, 575, -42, 576, 29, 600, 34, 601, -15, 602, -2, 603, 59, 628,
      -24, 629, -2, 630, 103, 655, 106, 656, -12, 657, -57, 658, 7, 682, 9, 683, -2, 684, -32, 685, 25, 710, 59, 711,
      -1, 712, 48, 7};
  static final int[] data_3379 = new int[] {125, -48, 126, -108, 152, 45, 153, -20, 154, -4, 155, 74, 180, 70, 181, -4,
      182, -4, 183, 116, 208, 13, 209, -41, 210, -4, 211, -46, 237, -49, 238, -4, 239, -26, 265, -48, 266, -3, 267, -25,
      293, -49, 294, -4, 295, -26, 321, -49, 322, -4, 323, -26, 349, -49, 350, -4, 351, -26, 377, -49, 378, -4, 379,
      -26, 405, -48, 406, -3, 407, -23, 408, 9, 433, -49, 434, -4, 435, -3, 436, 92, 461, -80, 462, -4, 463, -3, 464,
      92, 489, 93, 490, -4, 491, -3, 492, 92, 517, 93, 518, -4, 519, -3, 520, -60, 545, 85, 546, -5, 547, -1, 548, -102,
      574, -26, 575, -3, 576, -124, 602, -26, 603, -3, 604, -81, 630, -68, 631, -3, 632, -12, 633, 56, 658, 63, 659,
      -55, 660, -25, 661, 37, 1};
  static final int[] data_3870 = new int[] {153, 8, 154, 67, 155, -95, 156, -47, 157, -37, 158, -30, 159, 108, 160, 37,
      178, 3, 179, 38, 180, 108, 181, -124, 182, -2, 183, -11, 184, -75, 185, -44, 186, 122, 187, -26, 188, -50, 189,
      -93, 190, 30, 206, 97, 207, -2, 208, -2, 209, -6, 210, -9, 211, 77, 215, 32, 216, 105, 217, -75, 218, -43, 219,
      58, 233, 32, 234, -18, 235, -2, 236, -19, 237, 102, 238, 22, 246, -102, 247, -31, 260, 15, 261, 121, 262, -2, 263,
      -81, 264, 50, 274, 92, 275, -26, 276, 48, 286, 3, 287, 16, 288, -66, 289, -2, 290, -11, 291, -100, 302, -123, 303,
      -2, 304, -9, 314, 105, 315, -30, 316, -2, 317, -2, 318, -116, 330, -39, 331, -2, 332, -97, 342, -124, 343, -2,
      344, -2, 345, -31, 346, 22, 357, 83, 358, -3, 359, -9, 360, 89, 369, 8, 370, -40, 371, -2, 372, -67, 373, 30, 384,
      20, 385, -90, 386, -2, 387, -31, 397, -120, 398, -2, 399, -2, 400, -78, 412, 114, 413, -2, 414, -2, 415, 86, 425,
      -95, 426, -2, 427, -37, 428, -49, 429, 7, 439, 30, 440, -19, 441, -1, 442, -37, 443, 14, 453, -82, 454, -2, 455,
      -6, 456, 63, 467, 97, 468, -2, 469, -2, 470, -73, 481, -2, 482, -2, 483, -10, 484, 19, 493, 39, 494, -93, 495,
      -27, 496, -3, 497, -110, 498, 23, 509, -2, 510, -2, 511, 119, 521, -124, 522, -30, 523, -2, 524, -85, 537, -72,
      538, -2, 539, -16, 540, 79, 548, -116, 549, -58, 550, -2, 551, -64, 552, 63, 565, 13, 566, -32, 567, -2, 568, 97,
      569, 9, 570, 2, 571, 19, 572, 12, 573, 19, 574, 19, 575, -83, 576, -14, 577, -20, 578, -78, 579, 80, 594, 53, 595,
      -84, 596, -2, 597, -44, 598, -72, 599, -2, 600, -30, 601, -2, 602, -2, 603, -2, 604, -2, 605, -106, 606, 28, 623,
      4, 624, 103, 625, -90, 626, -80, 627, -21, 628, -4, 629, -2, 630, -2, 631, -26, 632, -42, 633, 82, 653, 7, 654,
      10, 655, 25, 656, -11, 657, -2, 658, -2, 659, -55, 660, 39, 684, 85, 685, 90, 686, -97, 687, 25, 0};
  static final int[] data_5827 = new int[] {100, 109, 101, -22, 102, -69, 127, -97, 128, -4, 129, -3, 130, -70, 154, 95,
      155, -10, 156, -3, 157, -3, 158, -45, 159, 25, 180, 47, 181, 81, 182, -2, 183, -3, 184, -33, 185, 60, 186, 96,
      187, -32, 188, 110, 206, 11, 207, -104, 208, -25, 209, -3, 210, -2, 211, -88, 212, 33, 214, 68, 215, -3, 216,
      -103, 217, 25, 234, -117, 235, -3, 236, -3, 237, -31, 238, -119, 239, 38, 242, -90, 243, -3, 244, -61, 245, 25,
      261, -127, 262, -28, 263, -3, 264, -33, 265, 38, 270, -55, 271, -3, 272, 80, 288, 22, 289, -62, 290, -3, 291, -34,
      292, 39, 298, -55, 299, -3, 300, 80, 315, 47, 316, -25, 317, -3, 318, -26, 319, 39, 326, -55, 327, -3, 328, 80,
      343, 81, 344, -3, 345, -3, 346, -43, 354, -55, 355, -3, 356, 80, 371, 81, 372, -2, 373, -55, 382, -54, 383, -2,
      384, 80, 399, -119, 400, -3, 401, -113, 409, -52, 410, -5, 411, -26, 412, 46, 427, -42, 428, -3, 429, 66, 437,
      -42, 438, -3, 439, -57, 454, 30, 455, -29, 456, -3, 457, 66, 465, -42, 466, -3, 467, -57, 482, 94, 483, -3, 484,
      -3, 485, 66, 492, 25, 493, -31, 494, -3, 495, -92, 510, 25, 511, -32, 512, -3, 513, 95, 520, 94, 521, -3, 522,
      -17, 523, 52, 539, -42, 540, -3, 541, -20, 542, -103, 543, 37, 544, 24, 545, 41, 546, 41, 547, -88, 548, -53, 549,
      -3, 550, -70, 567, -127, 568, -3, 569, -3, 570, -3, 571, -13, 572, -42, 573, -3, 574, -1, 575, -3, 576, -3, 577,
      -26, 578, 96, 595, 34, 596, -115, 597, -6, 598, -3, 599, -3, 600, -3, 601, -3, 602, -1, 603, -3, 604, -8, 605, 37,
      625, 89, 626, 120, 627, -52, 628, -3, 629, -3, 630, -1, 631, 126, 632, 76, 0};
  static final int[] data_6057 = new int[] {96, -82, 97, -3, 98, -16, 121, 34, 122, -114, 123, -16, 124, -8, 125, -4,
      126, -5, 127, -87, 149, -127, 150, -4, 151, -4, 152, -4, 153, -4, 154, -4, 155, -4, 156, 121, 176, 30, 177, -31,
      178, -4, 179, -21, 180, -105, 181, -125, 182, -4, 183, -4, 184, -123, 204, -128, 205, -4, 206, -4, 207, -93, 209,
      6, 210, -123, 211, -4, 212, -28, 213, 10, 231, 80, 232, -11, 233, -4, 234, -4, 235, 66, 238, 14, 239, -4, 240, -3,
      241, 111, 259, -58, 260, -4, 261, -4, 262, -71, 263, 21, 266, 5, 267, -107, 268, -3, 269, -94, 270, 5, 287, -16,
      288, -4, 289, -4, 290, 53, 296, -3, 297, -4, 298, 26, 315, -16, 316, -4, 317, -8, 318, 50, 324, -3, 325, -66, 326,
      11, 343, -16, 344, -54, 345, 82, 352, -3, 353, -54, 354, 14, 372, 71, 380, -1, 381, -3, 382, 26, 401, 34, 402,
      107, 403, 28, 408, -3, 409, -4, 410, 26, 428, 85, 429, -21, 430, -4, 431, -23, 432, -51, 433, 94, 434, 40, 435,
      50, 436, -3, 437, -4, 438, 26, 456, -50, 457, -4, 458, -4, 459, -4, 460, -4, 461, -4, 462, -27, 463, -22, 464, -3,
      465, -4, 466, 26, 484, -30, 485, -4, 486, -4, 487, -4, 488, -4, 489, -4, 490, -4, 491, -4, 492, -3, 493, -4, 494,
      26, 512, -58, 513, -4, 514, -4, 515, -4, 516, -4, 517, -4, 518, -4, 519, -4, 520, -3, 521, -4, 522, -63, 523,
      -112, 524, 40, 540, 94, 541, -4, 542, -4, 543, -4, 544, -4, 545, -4, 546, -4, 547, -4, 548, -3, 549, -4, 550, -4,
      551, -4, 552, -25, 553, -83, 554, -83, 555, -83, 556, 73, 568, 35, 569, -43, 570, -4, 571, -4, 572, -4, 573, -4,
      574, -4, 575, -18, 576, -30, 577, -31, 578, -31, 579, -8, 580, -4, 581, -4, 582, -4, 583, -4, 584, 120, 597, 76,
      598, -7, 599, -4, 600, -4, 601, -13, 602, -25, 603, 50, 607, -125, 608, -14, 609, -4, 610, -4, 611, -4, 612, -25,
      626, 95, 627, -39, 628, -4, 629, 93, 636, 32, 637, -39, 638, -25, 639, 119, 640, 50, 2};
  static final int[] data_6212 = new int[] {150, 113, 151, -60, 152, -3, 153, -3, 154, -3, 155, -2, 156, -3, 157, -94,
      158, -55, 159, -3, 160, -91, 177, 68, 178, -20, 179, -4, 180, -4, 181, -4, 182, -4, 183, -3, 184, -4, 185, -4,
      186, -4, 187, -4, 188, -92, 205, -91, 206, -4, 207, -4, 208, -21, 209, 120, 210, 44, 211, 44, 212, 121, 213, -103,
      214, -8, 215, -4, 216, -57, 217, 9, 233, -91, 234, -4, 235, -4, 236, 103, 241, -103, 242, -4, 243, -4, 244, -50,
      245, 10, 261, 94, 262, -4, 263, -4, 264, 123, 268, 68, 269, -19, 270, -4, 271, -16, 272, 81, 289, 12, 290, -46,
      291, -4, 292, -32, 293, 23, 295, 27, 296, -20, 297, -4, 298, -4, 299, -97, 318, 103, 319, -4, 320, -4, 321, 122,
      322, 7, 323, -69, 324, -4, 325, -4, 326, -82, 327, 8, 346, -125, 347, -4, 348, -4, 349, -4, 350, -47, 351, -3,
      352, -4, 353, -64, 354, 4, 374, 23, 375, -53, 376, -4, 377, -4, 378, -4, 379, -3, 380, -24, 381, 59, 403, 21, 404,
      -95, 405, -4, 406, -4, 407, -3, 408, -118, 432, 59, 433, -3, 434, -3, 435, -1, 436, -32, 437, 25, 459, 8, 460,
      -33, 461, -4, 462, -4, 463, -3, 464, -4, 465, 121, 487, -110, 488, -4, 489, -4, 490, -4, 491, -3, 492, -4, 493,
      -21, 494, 9, 514, 95, 515, -5, 516, -4, 517, -20, 518, 87, 519, -51, 520, -4, 521, -4, 522, 107, 541, 37, 542,
      -22, 543, -4, 544, -33, 545, 23, 547, -75, 548, -4, 549, -4, 550, 10, 568, 8, 569, -84, 570, -4, 571, -4, 572,
      122, 574, 39, 575, -74, 576, -4, 577, -38, 578, 7, 596, 12, 597, -46, 598, -4, 599, -9, 600, 53, 601, 12, 602,
      -43, 603, -3, 604, -4, 605, -108, 625, -91, 626, -4, 627, -8, 628, -85, 629, -4, 630, -4, 631, -3, 632, -15, 633,
      36, 653, -91, 654, -4, 655, -4, 656, -4, 657, -4, 658, -4, 659, -13, 660, 82, 681, 46, 682, -76, 683, -4, 684, -4,
      685, -86, 686, 95, 687, 28, 8};
  static final int[] data_6664 = new int[] {204, 12, 205, -121, 206, 108, 207, -72, 208, -58, 209, -57, 210, -58, 211,
      -58, 212, -58, 213, -58, 214, -58, 215, -90, 216, 46, 231, 43, 232, -101, 233, -2, 234, -2, 235, -2, 236, -2, 237,
      -2, 238, -2, 239, -2, 240, -2, 241, -2, 242, -2, 243, -2, 244, -87, 259, 116, 260, -11, 261, -2, 262, -2, 263, -2,
      264, -2, 265, -2, 266, -2, 267, -22, 268, -113, 269, -83, 270, -2, 271, -2, 272, 103, 288, -106, 289, -49, 290,
      -21, 291, -32, 292, -116, 293, 82, 294, 47, 295, 28, 296, 6, 297, -89, 298, -2, 299, -40, 300, 22, 323, 35, 324,
      -121, 325, -2, 326, -9, 327, 113, 350, 65, 351, -28, 352, -2, 353, -2, 354, 88, 374, 7, 375, 39, 376, 123, 377,
      -38, 378, -6, 379, -2, 380, -2, 381, -55, 382, 88, 383, 19, 400, 8, 401, 95, 402, -91, 403, -2, 404, -2, 405, -2,
      406, -2, 407, -2, 408, -2, 409, -2, 410, -2, 411, -24, 412, -68, 413, 63, 427, -114, 428, -2, 429, -2, 430, -2,
      431, -2, 432, -26, 433, -91, 434, 95, 435, 95, 436, 95, 437, -109, 438, -68, 439, -45, 440, -2, 441, -12, 442, 91,
      455, -45, 456, -2, 457, -15, 458, -96, 459, 77, 460, 18, 467, 10, 468, -59, 469, -2, 470, -87, 479, 3, 480, 79,
      483, 32, 484, 56, 485, 38, 494, 1, 495, 42, 496, -63, 497, -2, 498, -65, 507, -127, 508, -29, 509, 17, 522, 83,
      523, -2, 524, -2, 525, -13, 526, 41, 535, -26, 536, -16, 537, 53, 548, 32, 549, -69, 550, -12, 551, -2, 552, -52,
      553, 67, 554, 5, 563, 54, 564, -15, 565, -21, 566, -77, 567, 114, 568, 72, 569, 19, 570, 19, 571, 30, 572, 114,
      573, 114, 574, 114, 575, -69, 576, -18, 577, -2, 578, -18, 579, -116, 580, 22, 592, 116, 593, -53, 594, -2, 595,
      -2, 596, -2, 597, -2, 598, -2, 599, -2, 600, -2, 601, -1, 602, -2, 603, -2, 604, -28, 605, 117, 606, 42, 621, 43,
      622, 103, 623, -101, 624, -59, 625, -59, 626, -59, 627, -59, 628, -59, 629, -83, 630, 103, 631, 100, 632, 6, 3};
  static final int[] data_6722 = new int[] {151, 46, 152, 60, 153, 61, 154, 46, 178, -101, 179, -25, 180, -4, 181, -3,
      182, -25, 183, -92, 184, -92, 185, 32, 186, 15, 187, 15, 188, 1, 205, 64, 206, -12, 207, -4, 208, -4, 209, -3,
      210, -4, 211, -4, 212, -4, 213, -4, 214, -4, 215, -4, 216, 85, 233, 95, 234, -53, 235, -4, 236, -4, 237, -3, 238,
      -4, 239, -4, 240, -4, 241, -4, 242, -4, 243, -4, 244, -15, 245, 109, 246, 31, 262, 26, 263, 74, 264, 74, 265,
      -121, 266, -10, 267, -4, 268, -4, 269, -4, 270, -4, 271, -4, 272, -4, 273, -4, 274, -48, 293, 56, 294, -25, 295,
      -4, 296, -4, 297, -4, 298, -4, 299, -4, 300, -4, 301, -4, 302, -4, 318, 32, 319, 116, 320, -18, 321, -11, 322, -4,
      323, -4, 324, -4, 325, -4, 326, -4, 327, -4, 328, -4, 329, -20, 330, 75, 345, 104, 346, -42, 347, -4, 348, -4,
      349, -3, 350, -4, 351, -4, 352, -4, 353, -4, 354, -4, 355, -4, 356, -20, 357, 83, 373, 55, 374, -12, 375, -4, 376,
      -4, 377, -3, 378, -4, 379, -4, 380, -4, 381, -4, 382, -4, 383, -4, 384, -41, 385, 35, 402, -78, 403, -3, 404, -3,
      405, -1, 406, -3, 407, -3, 408, -3, 409, -3, 410, -3, 411, -3, 412, -3, 413, 59, 430, 16, 431, 44, 432, 44, 433,
      44, 434, 44, 435, 53, 436, -36, 437, -4, 438, -4, 439, -4, 440, -4, 441, 59, 451, 16, 452, 12, 462, 4, 463, 15,
      464, -128, 465, -4, 466, -4, 467, -4, 468, -19, 469, 55, 479, -3, 480, -64, 489, 50, 490, -106, 491, -4, 492, -4,
      493, -4, 494, -4, 495, -4, 496, 14, 507, -3, 508, -11, 509, -33, 510, -103, 511, 75, 512, 75, 513, 75, 514, 75,
      515, 75, 516, -94, 517, -20, 518, -4, 519, -4, 520, -4, 521, -4, 522, -4, 523, -4, 524, 102, 535, -21, 536, -4,
      537, -4, 538, -4, 539, -4, 540, -4, 541, -4, 542, -4, 543, -4, 544, -4, 545, -3, 546, -4, 547, -4, 548, -4, 549,
      -4, 550, -8, 551, -114, 552, 4, 563, 105, 564, -4, 565, -4, 566, -4, 567, -4, 568, -4, 569, -4, 570, -4, 571, -4,
      572, -4, 573, -3, 574, -4, 575, -4, 576, -4, 577, -44, 578, 104, 591, 6, 592, -120, 593, -89, 594, -4, 595, -57,
      596, -4, 597, -52, 598, -94, 599, -94, 600, -94, 601, -93, 602, -94, 603, -94, 604, 92, 605, 10, 621, 4, 622, 59,
      623, 24, 624, 59, 625, 28, 3};
  static final int[] data_6919 = new int[] {179, 26, 180, -99, 181, -1, 182, -78, 206, 3, 207, -98, 208, -2, 209, -2,
      210, -20, 211, 102, 234, 58, 235, -2, 236, -16, 237, -52, 238, -8, 239, -17, 240, 49, 262, 99, 263, -2, 264, -64,
      265, 3, 266, 98, 267, -9, 268, -34, 269, 3, 270, 97, 271, 2, 290, 99, 291, -2, 292, -2, 293, -124, 294, 3, 295,
      100, 296, -6, 297, -54, 298, -2, 299, 9, 318, 64, 319, -5, 320, -2, 321, -2, 322, -76, 323, -107, 324, -2, 325,
      -2, 326, -34, 327, 5, 347, 85, 348, -4, 349, -2, 350, -2, 351, -2, 352, -2, 353, -4, 354, 85, 376, 29, 377, -80,
      378, -36, 379, -2, 380, -2, 381, -7, 406, 9, 407, -106, 408, -2, 409, -111, 434, 24, 435, -23, 436, -6, 437, 59,
      462, 45, 463, -2, 464, -20, 490, 115, 491, -2, 492, -27, 518, -89, 519, -2, 520, -110, 545, 39, 546, -12, 547, -2,
      548, 119, 573, 59, 574, -2, 575, -22, 576, 22, 601, 78, 602, -2, 603, -34, 629, -109, 630, -2, 631, -34, 657, -99,
      658, -2, 659, -75, 685, -19, 686, -2, 687, -128, 713, -51, 714, -18, 715, 29, 9};
  static final int[] data_7324 = new int[] {156, 53, 157, 101, 158, -59, 159, -2, 160, -127, 161, 3, 179, 86, 180, -79,
      181, -79, 182, -79, 183, -78, 184, -26, 185, -3, 186, -3, 187, -3, 188, -3, 189, 99, 207, -91, 208, -3, 209, -3,
      210, -3, 211, -2, 212, -3, 213, -3, 214, -3, 215, -3, 216, -3, 217, -125, 234, -113, 235, -3, 236, -3, 237, -3,
      238, -3, 239, -2, 240, -3, 241, -3, 242, -3, 243, -17, 244, -64, 245, 15, 260, 5, 261, -128, 262, -21, 263, -3,
      264, -3, 265, -3, 266, -3, 267, -2, 268, -17, 269, -102, 270, 88, 271, 31, 288, 23, 289, -3, 290, -3, 291, -3,
      292, -37, 293, 55, 294, 55, 295, 55, 296, 41, 316, 23, 317, -3, 318, -3, 319, -3, 320, -26, 321, 122, 322, 26,
      323, 5, 344, 23, 345, -3, 346, -3, 347, -3, 348, -3, 349, -3, 350, -3, 351, -72, 352, 33, 372, 6, 373, -102, 374,
      -3, 375, -3, 376, -3, 377, -3, 378, -3, 379, -2, 380, -20, 381, -112, 382, 4, 401, 8, 402, 71, 403, -113, 404,
      -94, 405, -3, 406, -3, 407, -2, 408, -3, 409, -3, 410, -101, 435, 78, 436, -12, 437, -2, 438, -1, 439, 103, 464,
      100, 465, -3, 466, -3, 467, -58, 492, 67, 493, -3, 494, -3, 495, -34, 496, 24, 519, 76, 520, -43, 521, -3, 522,
      -3, 523, -58, 540, 30, 541, 20, 545, 17, 546, -104, 547, -40, 548, -3, 549, -3, 550, -3, 551, -82, 568, -123, 569,
      -62, 570, 19, 571, 39, 572, 74, 573, -40, 574, -3, 575, -2, 576, -3, 577, -3, 578, -3, 579, 88, 596, -123, 597,
      -3, 598, -19, 599, -14, 600, -11, 601, -3, 602, -3, 603, -2, 604, -3, 605, -7, 606, 79, 607, 8, 624, 66, 625, -3,
      626, -3, 627, -3, 628, -3, 629, -3, 630, -3, 631, -7, 632, -76, 633, 60, 652, 16, 653, -29, 654, -3, 655, -3, 656,
      -3, 657, -3, 658, -36, 659, 106, 681, 46, 682, -26, 683, -51, 684, -22, 685, 110, 686, 19, 5};
  static final int[] data_9091 = new int[] {96, 114, 97, -8, 98, -97, 99, 57, 123, 43, 124, -18, 125, -2, 126, -2, 127,
      -50, 151, -98, 152, -2, 153, -2, 154, -2, 155, 101, 178, 37, 179, -30, 180, -2, 181, -2, 182, -20, 183, 11, 206,
      -127, 207, -2, 208, -2, 209, -3, 210, 84, 233, 20, 234, -26, 235, -2, 236, -2, 237, -21, 261, 115, 262, -2, 263,
      -2, 264, -2, 265, 123, 289, -95, 290, -2, 291, -2, 292, -26, 293, 24, 317, -5, 318, -2, 319, -2, 320, -55, 324,
      36, 325, 83, 326, 69, 345, -5, 346, -2, 347, -2, 348, 111, 351, 119, 352, -9, 353, -2, 354, -4, 355, -55, 356,
      118, 357, 23, 372, 75, 373, -2, 374, -2, 375, -2, 376, 106, 377, 2, 378, 46, 379, -9, 380, -2, 381, -2, 382, -2,
      383, -2, 384, -2, 385, -56, 386, 4, 400, 92, 401, -2, 402, -2, 403, -2, 404, 106, 405, 115, 406, -2, 407, -2, 408,
      -2, 409, -25, 410, -79, 411, -17, 412, -2, 413, -2, 414, 123, 428, 92, 429, -2, 430, -2, 431, -2, 432, -102, 433,
      -5, 434, -2, 435, -2, 436, -4, 437, 75, 438, 8, 439, -45, 440, -2, 441, -2, 442, -13, 456, 89, 457, -2, 458, -2,
      459, -2, 460, -58, 461, -2, 462, -2, 463, -2, 464, -96, 466, 48, 467, -2, 468, -2, 469, -2, 470, -6, 485, -5, 486,
      -2, 487, -2, 488, -2, 489, -2, 490, -2, 491, -2, 492, 48, 494, -89, 495, -2, 496, -2, 497, -2, 498, -70, 513, -57,
      514, -1, 515, -2, 516, -2, 517, -2, 518, -2, 519, -45, 520, 7, 521, -123, 522, -3, 523, -2, 524, -2, 525, -7, 526,
      58, 541, -104, 542, -2, 543, -2, 544, -2, 545, -2, 546, -2, 547, -31, 548, -73, 549, -2, 550, -2, 551, -2, 552,
      -3, 553, -81, 569, 21, 570, -51, 571, -2, 572, -2, 573, -2, 574, -2, 575, -2, 576, -2, 577, -2, 578, -2, 579, -4,
      580, -122, 598, 59, 599, -62, 600, -3, 601, -2, 602, -2, 603, -2, 604, -2, 605, -2, 606, -20, 607, 104, 628, 80,
      629, -98, 630, -98, 631, -7, 632, -2, 633, -97, 634, 28, 6};
  static final int[] data_9186 = new int[] {215, 13, 216, 74, 217, -29, 218, -23, 219, 48, 234, 17, 235, 38, 236, 59,
      237, 122, 238, 38, 239, 15, 241, 16, 242, 66, 243, -67, 244, -2, 245, -2, 246, -2, 247, -125, 261, 2, 262, -68,
      263, -2, 264, -2, 265, -2, 266, -2, 267, -61, 268, 118, 269, -35, 270, -2, 271, -2, 272, -2, 273, -2, 274, -5,
      275, 57, 289, 104, 290, -2, 291, -2, 292, -2, 293, -2, 294, -2, 295, -2, 296, -2, 297, -2, 298, -2, 299, -2, 300,
      -2, 301, -2, 302, 107, 316, 88, 317, -4, 318, -2, 319, -18, 320, -106, 321, 32, 322, 18, 323, -119, 324, -50, 325,
      -13, 326, -2, 327, -2, 328, -6, 329, 109, 330, 1, 343, 92, 344, -18, 345, -2, 346, -25, 347, 31, 352, 24, 353,
      -33, 354, -2, 355, -24, 356, 96, 370, 59, 371, -19, 372, -2, 373, -18, 374, 59, 379, 23, 380, -48, 381, -2, 382,
      -28, 383, 103, 398, -124, 399, -2, 400, -2, 401, -127, 406, 22, 407, -43, 408, -2, 409, -5, 410, 104, 426, 118,
      427, -31, 428, -122, 429, 3, 433, 4, 434, -74, 435, -2, 436, -7, 437, 113, 461, -88, 462, -2, 463, -2, 464, -110,
      488, 82, 489, -2, 490, -1, 491, -102, 492, 11, 515, 13, 516, -20, 517, -2, 518, -16, 519, 46, 542, 19, 543, -40,
      544, -2, 545, -3, 546, 84, 569, 15, 570, -66, 571, -2, 572, -2, 573, -87, 597, 65, 598, -2, 599, -2, 600, -31,
      601, 30, 624, 34, 625, -30, 626, -2, 627, -2, 628, 26, 652, 108, 653, -2, 654, -2, 655, -94, 656, 3, 679, 66, 680,
      -5, 681, -2, 682, -21, 683, 3, 707, -107, 708, -2, 709, -2, 710, -78, 735, -128, 736, -2, 737, -73, 738, 12, 7};
  static final int[] data_9483 = new int[] {181, 52, 182, -128, 183, -44, 184, -41, 185, -125, 186, 6, 207, 52, 208,
      -113, 209, -8, 210, -2, 211, -2, 212, -2, 213, -21, 214, 116, 234, 15, 235, -21, 236, -2, 237, -7, 238, -59, 239,
      127, 240, 123, 241, 23, 242, -35, 243, 112, 261, 13, 262, -74, 263, -2, 264, -2, 265, 124, 266, 2, 270, -83, 271,
      -43, 286, 10, 289, 99, 290, -2, 291, -2, 292, 86, 293, 7, 298, 127, 299, -15, 314, 64, 317, -107, 318, -2, 319,
      -61, 320, 4, 322, 27, 323, -117, 324, -73, 325, 95, 326, 11, 327, 44, 345, -107, 346, -2, 347, -4, 348, -47, 349,
      -10, 350, -44, 351, -2, 352, -2, 353, -31, 354, 14, 373, 70, 374, -2, 375, -2, 376, -2, 377, -2, 378, -2, 379, -2,
      380, -2, 381, -2, 382, 60, 401, 16, 402, 127, 403, -2, 404, -2, 405, -37, 406, -113, 407, 107, 408, -2, 409, -2,
      410, 91, 430, 2, 431, 14, 432, 14, 433, 8, 435, -122, 436, -2, 437, -2, 438, 102, 462, 5, 463, -73, 464, -2, 465,
      -6, 466, 22, 490, 78, 491, -2, 492, -2, 493, -74, 518, -90, 519, -2, 520, -3, 521, 115, 545, 16, 546, -18, 547,
      -2, 548, -15, 573, -81, 574, -2, 575, -2, 576, -108, 601, -49, 602, -1, 603, -8, 604, 54, 628, 38, 629, -12, 630,
      -2, 631, -120, 656, 74, 657, -2, 658, -2, 659, 53, 684, 96, 685, -2, 686, 101, 687, 3, 712, 12, 713, -74, 714,
      -102, 9};

  final public static List<float[]> imageData =
      Arrays.asList(convert(data_673), convert(data_1488), convert(data_2968), convert(data_3379), convert(data_3870),
          convert(data_5827), convert(data_6057), convert(data_6212), convert(data_6664), convert(data_6722),
          convert(data_6919), convert(data_7324), convert(data_9091), convert(data_9186), convert(data_9483));

  static float[] convert(int[] data) {
    float[] imgData = new float[28 * 28];
    for (int i = 0; i < data.length - 1; i += 2) {
      byte b = (byte) data[i + 1];
      imgData[data[i]] = (float) (b & 0xFF) / 255.0f;
    }
    return imgData;
  }

  public static float[] getBaseData(DeviceId id) {
    return imageData.get(id.getUuid().toLowerCase().charAt(0) % 15);
  }
}
